--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "3d-icons",
+  "name": "vite-project",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
     "lit": "^3.1.4"
   },
   "devDependencies": {
-    "typescript": "^5.2.2",
     "vite": "^5.3.1"
   }
 }
